# FLprojects

./: .gitignore
Dots/: Dots_offlineAnalysis.m  images_dtb_calcLPOandPlot.m  simDDM_simple.m  simDDM_simpler.m
Dots/CodeOcean/: FP_Drugowitsch.c  FP_Drugowitsch.mexmaci64  FP_Fitting_Wrapper_NN.m  README.txt  sequentialModel_Fitting.m
archive/LikelihoodDecodingNN_CF/: condition_list_neuro.mat
dots3DMP/: createSessionData.m  dots3DMP_NeuralPreProcessing.m  dots3DMP_fit_cgauss.m  dots3DMP_humanPaper.m  dots3DMP_parseData_byConf.m  dots3DMP_parseData_multiConf.m  dots3DMP_plots_cgauss_byCoh.m  intervalFR.m
dots3DMP/Fetsch2011_NNcodes/: NNpaper2011_wrapper.m
dots3DMP/NSprocessing/: nsEventConditions.m
dots3DMP/behav_models/: dots3DMP_fitDDM.m  (+3 more)
preliminaries/: PLDAPS_preprocessing_nolocal.m
pyDots3DMP/: README.md  pyproject.toml  requirements.txt
pyDots3DMP/SJscripts/: ddm_2d_fitting.py  dots3DMP_ddm_2d_example.py  plot_allunit_psths.py  script_behavior.py
pyDots3DMP/archive/: ddm_2d.py  ddm_2d_sim_param_recovery.py  script_pseudopop_tuning.py  urgency_testing_script.py
pyDots3DMP/behavior/: Accumulator.py  ddm_demo.ipynb  descriptive.py  dots3DMP_Accumulator.py  method_of_images.md  moi.py  selfmotionddm.py  utils.py
pyDots3DMP/ddm_moi/: Accumulator.py  dots3DMP_Accumulator.py
pyDots3DMP/neural/: heading_prefs.py  load_utils.py
pyDots3DMP/scraps/: ddm_2d_sim_param_recovery.py  plot_accumulator_drifts_test.py
pyDots3DMP/scripts/: cp_analysis.py  ddm_2d_fitting.py  plot_allunit_raster_psths.py  psth_decoding_analyses.py  run_selfmotion_ddm.py
(+92 files in other folders)
