[project]
name = "pydots3dmp"
version = "0.1.0"
description = "A Python package for analysis and modelling of 3D dots Motion Platform task"
authors = [
    {name = "Steven Jerjian", email = "steven.jerjian@gmail.com"},
]
maintainers = [
    {name = "Steven Jerjian", email = "steven.jerjian@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9.18"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.6.2",
    "numpy>=1.23.5",
    "pandas>=1.5.2",
    "pybads>=1.0.2",
    "scikit-learn>=1.2.1",
    "scipy>=1.9.3",
]
